--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
   "readme": "Tradepacks Application",
   "repository": {
         "type": "git",
-        "url": "https://github.com/thinkblue36/TradePacks2.0"
+        "url": "git://github.com/thinkblue36/TradePacks2.0"
     },
   "nativescript": {
     "id": "org.nativescript.futPacks",
