--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "readme": "Tradepacks Application",
   "repository": {
     "type": "git",
-    "url": "git://github.com/NativeScript/template-hello-world-ng"
+    "url": "git://github.com/thinkblue36/TradePacks2.0"
   },
   "nativescript": {
     "id": "org.nativescript.futPacks",
